--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "express",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node app.ts",
+    "dev": "nodemon app.ts",
     "build": "tsc",
     "test": "jest"
   },
